--- a/src/app/components/characterlist/characterlist.component.html
+++ b/src/app/components/characterlist/characterlist.component.html
@@ -1,11 +1,18 @@
 <div class="card-container">
   <mat-card *ngFor="let character of characters" class="character-card">
     <img mat-card-image [src]="character.image || 'assets/placeholder.png'" alt="{{ character.name }}">
+    
     <mat-card-content>
       <h3 class="character-name">{{ character.name }}</h3>
-      <p class="actor">Actor: {{ character.actor }}</p>
-      <p class="house" [ngClass]="character.house?.toLowerCase()">{{ character.house || 'No House' }}</p>
+      <p class="actor">Actor: {{ character.actor || 'N/A' }}</p>
+      <p 
+        class="house" 
+        [ngClass]="character.house ? character.house.toLowerCase() : 'no-house'"
+      >
+        {{ character.house || 'No House' }}
+      </p>
     </mat-card-content>
+
     <mat-card-actions>
       <button mat-button color="primary" [routerLink]="['/character', character.id]">
         View Details
